src/objects/Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Item_ID__c</fullName>
        <label>Checklist Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Suggestion__c</fullName>
        <label>Content Suggestion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hotel_Checklist_Status_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Hotel Checklist Status ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Live_Content__c</fullName>
        <label>Live Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Locale_ID__c</fullName>
        <label>Locale ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Supplied_Email__c</fullName>
        <label>Supplied Email</label>
        <type>Email</type>
    </fields>
    <label>Action Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <recordTypes>
        <fullName>Destination_Management</fullName>
        <active>true</active>
        <label>Destination Management</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>